# pgevolve

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  book.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
crates/pgevolve/: Cargo.toml
crates/pgevolve-conformance/: AUTHORING.md  Cargo.toml
crates/pgevolve-conformance/src/: failure.rs  fixture.rs  lib.rs  normalize.rs  planning.rs  walk.rs
crates/pgevolve-conformance/src/assertions/: apply.rs  dep_graph.rs  diff.rs  intent_shape.rs  minimality.rs  mod.rs  plan.rs  topological_order.rs  touches_only.rs
crates/pgevolve-conformance/tests/: run.rs
crates/pgevolve-core/: Cargo.toml
crates/pgevolve-core-macros/: Cargo.toml
crates/pgevolve-core-macros/src/: lib.rs
crates/pgevolve-core-macros/tests/: derive_diff.rs  ui.rs
crates/pgevolve-core-macros/tests/ui/: on_enum.rs  on_enum.stderr  on_tuple_struct.rs  on_tuple_struct.stderr  two_strategies.rs  two_strategies.stderr  unknown_attr.rs  unknown_attr.stderr
crates/pgevolve-core/src/: error.rs  identifier.rs  lib.rs
crates/pgevolve-core/src/catalog/: assemble.rs  cluster.rs  collations.rs  error.rs  filter.rs  grants.rs  mod.rs  pg_querier.rs  publications.rs  reloptions.rs  rows.rs  statistics.rs  subscriptions.rs  version.rs
crates/pgevolve-core/src/catalog/assemble/: aggregates.rs  casts.rs  collations.rs  default_privileges.rs  event_triggers.rs  functions.rs  mod.rs  partitions.rs  policies.rs  publications.rs  statistics.rs  subscriptions.rs  tables.rs  triggers.rs  ts_configurations.rs  ts_dictionaries.rs  user_types.rs  views.rs
crates/pgevolve-core/src/catalog/queries/: aggregates.rs  casts.rs  cluster.rs  collations.rs  default_privileges.rs  extensions.rs  functions.rs  mod.rs  partitioned_tables.rs  partitions.rs  pg14.rs  pg15.rs  pg16.rs  pg17.rs  pg18.rs  policies.rs  shared.rs  triggers.rs  ts_configurations.rs  ts_dictionaries.rs  types.rs  views.rs
crates/pgevolve-core/src/diff/: aggregates.rs  casts.rs  change.rs  changeset.rs  cluster.rs  collations.rs  columns.rs  constraints.rs  default_privileges.rs  destructiveness.rs  event_triggers.rs  extensions.rs  grants.rs  indexes.rs  mod.rs  owner_grants.rs  owner_op.rs  policies.rs  publications.rs  reloptions.rs  routines.rs  schemas.rs  sequence_op.rs  sequences.rs  statistics.rs  subscriptions.rs  table_op.rs  tables.rs  triggers.rs  ts_configurations.rs  ts_dictionaries.rs  types.rs  views.rs
crates/pgevolve-core/src/ir/: aggregate.rs  cast.rs  catalog.rs  collation.rs  column.rs  column_type.rs  constraint.rs  default_expr.rs  default_privileges.rs  difference.rs  eq.rs  event_trigger.rs  extension.rs  function.rs  grant.rs  index.rs  mod.rs  partition.rs  policy.rs  procedure.rs  publication.rs  reloptions.rs  schema.rs  sequence.rs  statistic.rs  subscription.rs  table.rs  trigger.rs  user_type.rs  view.rs
crates/pgevolve-core/src/ir/canon/: aggregates.rs  casts.rs  cluster.rs  collations.rs  default_privileges.rs  event_triggers.rs  filter_pg_defaults.rs  grants.rs  mod.rs  policies.rs  publications.rs  (+8 more)
crates/pgevolve-core/src/lint/: finding.rs  mod.rs  source_tree.rs  test_helpers.rs  universal.rs
crates/pgevolve-core/src/parse/: ast_canon.rs  ast_resolution.rs  directives.rs  error.rs  mod.rs  normalize_body.rs  normalize_expr.rs  statement.rs
crates/pgevolve-core/src/plan/: deserialize.rs  edges.rs  error.rs  function_dependents.rs  graph.rs  grouping.rs  io_error.rs  mod.rs  ordered.rs  ordering.rs  plan.rs  policy.rs  raw_step.rs  recreate_views.rs  serialize.rs  type_dependents.rs
crates/pgevolve-core/src/render/: index.rs  mod.rs  schema.rs  sequence.rs  table.rs  view.rs
crates/pgevolve-core/tests/: ast_canon.rs  ast_resolution.rs  catalog_check_option.rs  catalog_drift.rs  catalog_grants.rs  catalog_policies.rs  catalog_reloptions.rs  catalog_round_trip.rs  cluster_catalog.rs  cluster_parse.rs  dep_edges.rs  determinism.rs  dump_round_trip.rs  functions_round_trip.rs  lint_position_drift.rs  normalize_body.rs  parse_directory.rs  parser_corpus.rs  property_tests.rs  publication_round_trip.rs  statistic_round_trip.rs  subscription_round_trip.rs  table_like_round_trip.rs  types_round_trip.rs
crates/pgevolve-testkit/: Cargo.toml
crates/pgevolve-testkit/proptest-regressions/ir_generator/: grants.txt
crates/pgevolve-testkit/src/: catalog_snapshotter.rs  ephemeral_pg.rs  equivalence_asserter.rs  ir_generator.rs  ir_mutator.rs  lib.rs  migration_fixture.rs  pg_querier.rs  test_pg_backend.rs
crates/pgevolve-testkit/src/ir_generator/: cluster.rs  collation.rs  event_trigger.rs  grants.rs  index.rs  mod.rs  policy.rs  publication.rs  reloptions.rs  schema.rs  sequence.rs  statistic.rs  subscription.rs  table.rs  user_type.rs
crates/pgevolve/src/: cli.rs  cluster_config.rs  config.rs  connection.rs  lib.rs  main.rs  pg_querier.rs  shadow_pg.rs  target_identity.rs
crates/pgevolve/src/api/: cluster.rs  mod.rs
crates/pgevolve/src/commands/: apply.rs  bootstrap.rs  diff.rs  doctor.rs  dump.rs  graph.rs  init.rs  lint.rs  mod.rs  plan.rs  rewrite_table.rs  status.rs  validate.rs
crates/pgevolve/src/executor/: audit.rs  bootstrap.rs  cluster_apply.rs  cluster_preflight.rs  env_interp.rs  error.rs  execute.rs  lock.rs  mod.rs  preflight.rs  status.rs
crates/pgevolve/src/shadow/: dsn.rs  mod.rs  testcontainers.rs  validate.rs
crates/pgevolve/templates/: pgevolve.toml
crates/pgevolve/tests/: aggregate_e2e.rs  api_build_plan.rs  cast_e2e.rs  chaos_apply.rs  cli_e2e.rs  cluster_api.rs  cluster_apply_e2e.rs  doctor_command.rs  env_interp_integration.rs  event_trigger_e2e.rs  executor_smoke.rs  graph_command.rs  lint_format.rs  lint_waiver_e2e.rs  pg_property_tests.rs  shadow_backend.rs  shadow_validate.rs  shadow_validate_flag.rs  shadow_validate_views.rs  table_tablespace_e2e.rs  text_search_e2e.rs
crates/pgevolve/tests/common/: mod.rs
xtask/: Cargo.toml
xtask/src/: capture_regression.rs  coverage.rs  diagnose_pg_version.rs  fixture_cost.rs  main.rs  property_status.rs  soak_streak.rs  verify_regression.rs
(+1453 files in other folders)
