[workspace]
resolver = "2"
members = [
  "crates/pgevolve-core",
  "crates/pgevolve",
  "crates/pgevolve-testkit",
]

[workspace.package]
version      = "0.1.0-dev"
edition      = "2021"
rust-version = "1.88"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/saosebastiao/pgevolve"
authors      = ["Daniel Toone"]

[workspace.lints.rust]
missing_docs        = "warn"
unsafe_code         = "forbid"
rust_2018_idioms    = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all                 = { level = "warn", priority = -1 }
pedantic            = { level = "warn", priority = -1 }
nursery             = { level = "warn", priority = -1 }
# Allow these pedantic lints that fight idiomatic code:
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"

[workspace.dependencies]
# Parser
pg_query = "6"

# Errors / utilities
thiserror = "1"
anyhow    = "1"

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"

# Hashing / IDs
blake3 = "1"
uuid   = { version = "1", features = ["v4", "serde"] }

# Logging / tracing
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }

# Time
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Postgres driver (binary only)
tokio          = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-time-0_3"] }

# Testing
proptest         = "1"
testcontainers   = "0.22"
insta            = { version = "1", features = ["yaml", "filters"] }
pretty_assertions = "1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto       = "thin"
strip     = "symbols"

[profile.test]
opt-level = 1
