[workspace]
resolver = "2"
members = [
  "crates/pgevolve-core",
  "crates/pgevolve",
  "crates/pgevolve-conformance",
  "crates/pgevolve-testkit",
  "xtask",
]

[workspace.package]
version      = "0.1.0-dev"
edition      = "2024"
rust-version = "1.95"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/saosebastiao/pgevolve"
authors      = ["Daniel Toone"]

[workspace.lints.rust]
missing_docs        = "warn"
# `deny` rather than `forbid` so individual test functions can locally
# `#[allow(unsafe_code)]` for env-var manipulation. Edition 2024 marks
# std::env::set_var / remove_var as unsafe, which means tests touching
# process env vars must wrap them. Production code must stay
# unsafe-free.
unsafe_code         = "deny"
rust_2018_idioms    = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all                 = { level = "warn", priority = -1 }
pedantic            = { level = "warn", priority = -1 }
nursery             = { level = "warn", priority = -1 }
# Allow these lints that fight idiomatic code:
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
# `fn main() -> anyhow::Result<()>` is the conventional CLI entry point even
# when current code can't fail — keep it for future-proofing.
unnecessary_wraps       = "allow"
# Tests of compile-time constants (e.g., the VERSION constant) can be
# statically determined; clippy is right but the test is still useful.
const_is_empty          = "allow"

[workspace.dependencies]
# Parser
pg_query = "6"
regex    = "1"

# Errors / utilities
thiserror = "2"
anyhow    = "1"

# Serialization. serde_yaml deliberately omitted — upstream archived it in
# 2024 and the only consumer (manifest.toml's embedded target_snapshot)
# now uses serde_json instead.
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "1"
# Pinned to 2.x because bincode 3 dropped the bundled serde feature in
# favor of a not-yet-published companion crate. Our only use site is the
# PlanId hash payload, which depends on `bincode::serde::encode_to_vec`.
# Revisit when the bincode 3 serde story stabilizes.
bincode     = { version = "2", features = ["serde"] }

# Hashing / IDs
blake3 = "1"
hex    = "0.4"
uuid   = { version = "1", features = ["v4", "serde"] }

# Logging / tracing
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }

# Time
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Postgres driver (binary only)
tokio          = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-time-0_3"] }

# Ephemeral Postgres (used by `validate --shadow` in the binary and by
# the testkit's tier-3/4 fixtures).
testcontainers   = "0.27"

# Testing
proptest         = "1"
pretty_assertions = "1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto       = "thin"
strip     = "symbols"

[profile.test]
opt-level = 1
