[package]
name         = "pgevolve-conformance"
description  = "Deterministic fixture-driven conformance suite for pgevolve"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
publish      = false

[lints]
workspace = true

[dependencies]
pgevolve-core    = { path = "../pgevolve-core" }
pgevolve-testkit = { path = "../pgevolve-testkit" }

anyhow         = { workspace = true }
regex          = { workspace = true }
serde          = { workspace = true }
tempfile       = "3"
thiserror      = { workspace = true }
toml           = { workspace = true }
tokio          = { workspace = true }
tokio-postgres = { workspace = true }
tracing        = { workspace = true }
walkdir        = "2"

[dev-dependencies]
pgevolve          = { path = "../pgevolve" }
pretty_assertions = { workspace = true }
