[package]
name        = "pgevolve-core-macros"
version     = "0.1.0-dev"
edition     = "2024"
description = "Internal proc-macros for pgevolve-core. Not a public API."
license     = "AGPL-3.0-or-later"
publish     = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote       = "1"
syn         = { version = "2", features = ["full"] }

[dev-dependencies]
trybuild = "1"

[lints]
workspace = true
