[package]
name        = "pgevolve-core-macros"
version     = "0.2.1"
edition     = "2024"
description = "Internal proc-macros for pgevolve-core. Published only so pgevolve-core resolves on crates.io; not a stable public API."
license     = { workspace = true }
repository  = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote       = "1"
syn         = { version = "2", features = ["full"] }

[dev-dependencies]
trybuild = "1"

[lints]
workspace = true
