[package]
name         = "pgevolve-core"
description  = "Postgres declarative schema management — core library (parser, IR, diff, planner) powering the pgevolve CLI."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = "https://github.com/saosebastiao/pgevolve"
documentation = "https://docs.rs/pgevolve-core"
readme       = "../../README.md"
keywords     = ["postgres", "postgresql", "migration", "schema", "database"]
categories   = ["database", "development-tools"]
authors      = { workspace = true }

[lints]
workspace = true

[dependencies]
pg_query              = { workspace = true }
pgevolve-core-macros  = { path = "../pgevolve-core-macros" }
regex       = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
bincode     = { workspace = true }
blake3      = { workspace = true }
hex         = { workspace = true }
tracing     = { workspace = true }
time        = { workspace = true }
walkdir     = "2"
glob        = "0.3"

[dev-dependencies]
pgevolve-testkit  = { path = "../pgevolve-testkit" }

pretty_assertions = { workspace = true }
proptest          = { workspace = true }
tempfile          = "3"
anyhow            = { workspace = true }
tokio             = { workspace = true }
tokio-postgres    = { workspace = true }
