[package]
name         = "pgevolve-core"
description  = "Postgres declarative schema management — core library (parser, IR, diff, planner) powering the pgevolve CLI."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = "https://github.com/saosebastiao/pgevolve"
documentation = "https://docs.rs/pgevolve-core"
readme       = "../../README.md"
keywords     = ["postgres", "postgresql", "migration", "schema", "database"]
categories   = ["database", "development-tools"]
authors      = { workspace = true }

[lints]
workspace = true

[dependencies]
pg_query              = { workspace = true }
regex       = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
blake3      = { workspace = true }
hex         = { workspace = true }
tracing     = { workspace = true }
time        = { workspace = true }
walkdir     = { workspace = true }
glob        = "0.3"

# Optional: enables the `pg_querier` module — a `tokio_postgres::Client`-backed
# `CatalogQuerier` adapter. Used by the `pgevolve` CLI and the `pgevolve-testkit`
# tier-3 fixture runner. Library consumers that build their own `CatalogQuerier`
# (e.g. from a different async PG driver) can omit this feature to avoid the
# tokio + tokio-postgres deps.
tokio          = { workspace = true, optional = true }
tokio-postgres = { workspace = true, optional = true }

[features]
default = []
tokio-postgres-querier = ["dep:tokio", "dep:tokio-postgres"]

[dev-dependencies]
pgevolve-testkit  = { path = "../pgevolve-testkit" }

pretty_assertions = { workspace = true }
proptest          = { workspace = true }
tempfile          = { workspace = true }
anyhow            = { workspace = true }
tokio             = { workspace = true }
tokio-postgres    = { workspace = true }
