[package]
name         = "pgevolve"
description  = "Postgres declarative schema management CLI"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "pgevolve"
path = "src/main.rs"

[dependencies]
pgevolve-core = { path = "../pgevolve-core" }

clap                = { workspace = true }
anyhow              = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
toml                = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
tokio               = { workspace = true }
tokio-postgres      = { workspace = true }
uuid                = { workspace = true }
time                = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
