[package]
name         = "pgevolve"
description  = "Postgres declarative schema management CLI"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }

[lints]
workspace = true

[lib]
name = "pgevolve"
path = "src/lib.rs"

[[bin]]
name = "pgevolve"
path = "src/main.rs"

[dependencies]
pgevolve-core = { path = "../pgevolve-core" }

clap                = { workspace = true }
anyhow              = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
thiserror           = { workspace = true }
toml                = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
tokio               = { workspace = true }
tokio-postgres      = { workspace = true }
uuid                = { workspace = true, features = ["v4"] }
time                = { workspace = true }
blake3              = { workspace = true }
hex                 = { workspace = true }

[dev-dependencies]
pgevolve-testkit  = { path = "../pgevolve-testkit" }
pretty_assertions = { workspace = true }
tempfile          = "3"
