[package]
name         = "pgevolve"
description  = "Postgres declarative schema management CLI — diff source SQL against a live database and generate reviewable migrations."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = "https://github.com/saosebastiao/pgevolve"
documentation = "https://docs.rs/pgevolve"
readme       = "../../README.md"
keywords     = ["postgres", "postgresql", "migration", "schema", "database"]
categories   = ["database", "command-line-utilities", "development-tools"]
authors      = { workspace = true }

[lints]
workspace = true

[lib]
name = "pgevolve"
path = "src/lib.rs"

[[bin]]
name = "pgevolve"
path = "src/main.rs"

[dependencies]
pgevolve-core = { version = "0.4.2", path = "../pgevolve-core", features = ["tokio-postgres-querier"] }

clap                = { workspace = true }
anyhow              = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
thiserror           = { workspace = true }
toml                = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
tokio               = { workspace = true }
tokio-postgres      = { workspace = true }
uuid                = { workspace = true, features = ["v4"] }
time                = { workspace = true }
blake3              = { workspace = true }
hex                 = { workspace = true }
testcontainers      = { workspace = true }
tempfile            = { workspace = true }

[dev-dependencies]
pgevolve-testkit  = { path = "../pgevolve-testkit" }
pretty_assertions = { workspace = true }
proptest          = { workspace = true }
